# Nelis-sol_Sol_1Q24

./: package-lock.json
airdrop/: dev-wallet.json  enroll.ts  package.json  tsconfig.json
android-app/: settings.gradle.kts
capstone/splcards/: Anchor.toml  README.md  package-lock.json  package.json
capstone/splcards/programs/splcards/: Cargo.toml
capstone/splcards/programs/splcards/src/: constants.rs  error.rs  lib.rs
capstone/splcards/programs/splcards/src/context/: create_wrapper.rs  mod.rs  transact.rs  wrap.rs  wrapper_instructions.rs
capstone/splcards/programs/splcards/src/instructions/: execute.rs  mod.rs  transfer_hook.rs  unwrap.rs  wrap.rs
capstone/splcards/programs/splcards/src/instructions/token_policy/: create.rs  delete.rs  instructions.rs  mod.rs
capstone/splcards/programs/splcards/src/instructions/user_policy/: delete.rs  instructions.rs
capstone/splcards/programs/splcards/src/instructions/wallet_policy/: create.rs  delete.rs  instructions.rs
capstone/splcards/programs/splcards/src/instructions/wrapper/: create.rs  delete.rs  instructions.rs  mod.rs
capstone/splcards/programs/splcards/src/state/: mod.rs  token_policy.rs  user_policy.rs  user_token_policy.rs  vault.rs  vault_policy.rs  vault_token_policy.rs  wallet_policy.rs  wrapper.rs
prerequisites/airdrop/: keygen.ts  transfer.ts
prerequisites/programs/: wba_prereq.ts
programs/: wba_prereq_idl.ts
solana-starter-new/: .gitignore
solana-starter-new/ts/: .gitignore  (+2 more)
time-vault/: .gitignore  Anchor.toml  program-keypair.json
vault-2024/: Anchor.toml  package-lock.json
(+154 files in other folders)
