[package]
name = "splcards"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "splcards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.18.7"
ahash = "=0.8.4"
toml_edit = "=0.21.0"
spl-transfer-hook-interface = "0.5.0"
spl-token-2022 = {version = "1.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.2.1"
spl-pod = "0.1.0"